Fixed alignment of folder file count

--- a/src/renderer/assets/global.css
+++ b/src/renderer/assets/global.css
@@ -464,9 +464,10 @@ body {
 .folder-file-count-container {
     position: fixed;
     color: var(--folder-file-count-container-color);
-    margin-left: 210px;
+    margin-left: 205px;
     margin-top: 16px;
     width: 42px;
+    text-align: right;
     /*border: 1px solid white;*/
     overflow-x: scroll;
 }
